primitives/tests/ui_fail/neg_one_private.stderr
error[E0599]: no function or associated item named `negative_one` found for struct `Fixed` in the current scope
 --> tests/ui_fail/neg_one_private.rs:4:22
  |
4 |     let qty = Fixed::negative_one();
  |                      ^^^^^^^^^^^^ function or associated item not found in `Fixed`
