primitives/tests/ui_fail/neg_one_private.rs
use iroha_primitives::fixed::Fixed;

fn main() {
    let qty = Fixed::negative_one();
}
